# grad_aff

./: .gitignore  CMakeLists.txt  README.md  cov.bat  cpp.hint
.github/workflows/: win.yml
include/core/: AffApi.h  AffBase.h  AffCompat.h  AffDefines.h  AffExceptions.h  AffLazy.h  AffTypes.h  AffVersion.h  BaseStream.h  StreamUtil.hpp
include/core/devices/: IStreamDevice.hpp
include/grad_aff/: GridBlockTree.h  StreamUtil.h  Types.h  a3lzo.h  a3lzss.h  grad_aff.h
include/grad_aff/p3d/: AnimTransformType.h  AnimationClass.h  Anims2Bones.h  Bones2Anims.h  ClipFlag.h  FaceData.h  LodBoneLink.h  LodEdges.h  LodFaces.h  LodFrames.h  LodMaterial.h  LodNamedSelection.h  LodProxy.h  LodSection.h  LodStageTexture.h  LodStageTransform.h  LodType.h  ModelInfo.h  ODOLv4xLod.h  ShaderId.h  Skeleton.h  UVSet.h  VertPorperty.h  VertexNeighborInfo.h  odol.h
include/grad_aff/paa/: Palette.h  Tagg.h  mipmap.h  paa.h  squishMod.h  tagg.h
include/grad_aff/pbo/: Entry.h  Pbo.h
include/grad_aff/rap/: Class.h  ClassEntry.h  RapParser.h  Token.h  rap.h
include/grad_aff/wrp/: ClassedModel.h  MapInfo.h  MapType.h  Object.h  RoadNet.h  RoadPart.h  wrp.h
include/paa/: Mipmap.h  Paa.h  Palette.h  Tagg.h
src/: GridBlockTree.cpp  StreamUtil.cpp  a3lzo.cpp  a3lzss.cpp  grad_aff.cpp
src/core/: AffBase.cpp  AffExceptions.cpp  AffLazy.cpp
src/p3d/: odol.cpp
src/paa/: Mipmap.cpp  Tagg.cpp  paa.cpp
src/pbo/: Pbo.cpp
src/rap/: RapParser.cpp  rap.cpp
src/wrp/: wrp.cpp
tests/: CMakeLists.txt  grad_aff_tests.cpp  p3d_tests.cpp  paa_tests.cpp  pbo_tests.cpp  rap_parser_tests.cpp  rap_tests.cpp  wrp_tests.cpp
tests/data/paa/: 128x2048DXT1.paa  AdlerDXT1.paa  AdlerDXT5.paa  InvalidPaa.paa  UnsupportedPaa.paa
